<resources>
    <string name="app_name">UnifiedBloodDonor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_DOB">Date of Birth</string>
    <string name="hint_blood_type">Blood Type</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_forgot">Forgot Password?</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_blood_type">Select a Blood Type</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet?</string>
    <string name="text_not_member_click">Create one</string>
    <string name="text_already_member">Already a member?</string>
    <string name="text_already_member_click">Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
</resources>